Safari double tooltip Fix
todo: redefine all truncateable text in tables using as div
class="ellipsis"

--- a/gui/default/assets/css/overrides.css
+++ b/gui/default/assets/css/overrides.css
@@ -140,9 +140,12 @@ table.table-condensed {
     table-layout: fixed;
 }
 table.table-condensed td {
+    white-space: nowrap;
+}
+.ellipsis{
     overflow: hidden;
     text-overflow: ellipsis;
-    white-space: nowrap;
+    pointer-events: none;
 }
 
 .folder-advanced{
